--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,5 @@ add_subdirectory(S6)
 add_subdirectory(S7)
 add_subdirectory(S8)
 add_subdirectory(S9)
+add_subdirectory(S10)
+add_subdirectory(S11)
